@@ -1,3 +1,9 @@
+2000-05-24  TNT Development  <tntdevel@brokendreams.net>
+
+	* tnt.el (tnt-show-buddy-signonoff): added.
+	(tnt-set-buddy-status): checks for tnt-show-buddy-signoff, determines
+	whether or not signon/off messages are displayed in the minibuffer.
+
 2000-05-22  Neil ''Fred'' Picciotto  <fred@guido.derf.net>
 
 	* tnt.el (tnt-pop-event): now gives message if called when there
